@@ -16,20 +16,18 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class EMIWhiskingRecipe implements EmiRecipe {
-    public static final Identifier TEXTURE = new Identifier(ModernDelightMain.MOD_ID, "textures/gui/compats/glass_bowl.png");
+    public static final Identifier TEXTURE = Identifier.of(ModernDelightMain.MOD_ID, "textures/gui/compats/glass_bowl.png");
     public static final EmiStack WORKSTATION = EmiStack.of(ModBlocks.GLASS_BOWL);
     public static final EmiRecipeCategory CATEGORY
-            = new EmiRecipeCategory(new Identifier(ModernDelightMain.MOD_ID, "whisking"), WORKSTATION);
-    private final Identifier id;
+            = new EmiRecipeCategory(Identifier.of(ModernDelightMain.MOD_ID, "whisking"), WORKSTATION);
     private final List<EmiIngredient> input;
     private final List<EmiStack> output;
 
     public EMIWhiskingRecipe(WhiskingRecipe recipe) {
-        this.id = recipe.getId();
-        List<EmiIngredient> lists = new ArrayList<>(List.of(EmiIngredient.of(recipe.getIngredients().get(0))));
+        List<EmiIngredient> lists = new ArrayList<>(List.of(EmiIngredient.of(recipe.getIngredients().getFirst())));
         lists.add(EmiIngredient.of(TagKeys.WHISKS));
         this.input = lists;
-        this.output = List.of(EmiStack.of(recipe.getOutput(null)));
+        this.output = List.of(EmiStack.of(recipe.getResult(null)));
     }
     @Override
     public EmiRecipeCategory getCategory() {
@@ -38,7 +36,7 @@ public class EMIWhiskingRecipe implements EmiRecipe {
 
     @Override
     public @Nullable Identifier getId() {
-        return id;
+        return null;
     }
 
     @Override
