@@ -1,41 +1,48 @@
 package com.zombie_cute.mc.bakingdelight.recipe.custom;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonSyntaxException;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import com.zombie_cute.mc.bakingdelight.block.ModBlocks;
 import com.zombie_cute.mc.bakingdelight.util.FluidStack;
-import net.fabricmc.fabric.api.transfer.v1.fluid.FluidVariant;
-import net.minecraft.fluid.Fluid;
-import net.minecraft.inventory.SimpleInventory;
 import net.minecraft.item.ItemStack;
-import net.minecraft.network.PacketByteBuf;
-import net.minecraft.recipe.*;
-import net.minecraft.registry.DynamicRegistryManager;
-import net.minecraft.registry.Registries;
-import net.minecraft.util.Identifier;
-import net.minecraft.util.JsonHelper;
+import net.minecraft.network.RegistryByteBuf;
+import net.minecraft.network.codec.PacketCodec;
+import net.minecraft.recipe.Ingredient;
+import net.minecraft.recipe.Recipe;
+import net.minecraft.recipe.RecipeSerializer;
+import net.minecraft.recipe.RecipeType;
+import net.minecraft.recipe.input.SingleStackRecipeInput;
+import net.minecraft.registry.RegistryWrapper;
 import net.minecraft.util.collection.DefaultedList;
 import net.minecraft.world.World;
 
-public class SqueezeRecipe implements Recipe<SimpleInventory> {
-    private final Identifier id;
+import java.util.List;
+
+public class SqueezeRecipe implements Recipe<SingleStackRecipeInput> {
     private final ItemStack output_item;
-    private final DefaultedList<Ingredient> ingredients;
+    private final List<Ingredient> ingredients;
     private final FluidStack output_fluid;
+    private final String fluid_name;
+    private final int fluid_amount;
     private final boolean isDanger;
     private final boolean doCreateFire;
-    public SqueezeRecipe(Identifier id, DefaultedList<Ingredient> ingredients, ItemStack output_item, FluidStack output_fluid, boolean isDanger, boolean doCreateFire){
-        this.id = id;
+    public SqueezeRecipe(List<Ingredient> ingredients, ItemStack output_item, String fluid_name,int fluid_amount, boolean isDanger, boolean doCreateFire){
+        this.fluid_name = fluid_name;
+        this.fluid_amount = fluid_amount;
+        FluidStack output_fluid = FluidStack.getFluidStack(fluid_name, fluid_amount);
         this.output_item = output_item;
         this.ingredients = ingredients;
         this.output_fluid = output_fluid;
         this.isDanger = isDanger;
         this.doCreateFire = doCreateFire;
     }
+
     @Override
-    public boolean matches(SimpleInventory inventory, World world) {
-        return ingredients.get(0).test(inventory.getStack(0));
+    public boolean matches(SingleStackRecipeInput inventory, World world) {
+        return ingredients.getFirst().test(inventory.getStackInSlot(0));
+
     }
 
     public boolean isDanger() {
@@ -47,7 +54,7 @@ public class SqueezeRecipe implements Recipe<SimpleInventory> {
     }
 
     @Override
-    public ItemStack craft(SimpleInventory inventory, DynamicRegistryManager registryManager) {
+    public ItemStack craft(SingleStackRecipeInput input, RegistryWrapper.WrapperLookup lookup) {
         return output_item;
     }
 
@@ -61,7 +68,7 @@ public class SqueezeRecipe implements Recipe<SimpleInventory> {
     }
 
     @Override
-    public ItemStack getOutput(DynamicRegistryManager registryManager) {
+    public ItemStack getResult(RegistryWrapper.WrapperLookup registriesLookup) {
         return output_item;
     }
 
@@ -75,11 +82,6 @@ public class SqueezeRecipe implements Recipe<SimpleInventory> {
     @Override
     public ItemStack createIcon() {
         return ModBlocks.WOODEN_BASIN.asItem().getDefaultStack();
-    }
-
-    @Override
-    public Identifier getId() {
-        return id;
     }
 
     @Override
@@ -100,62 +102,54 @@ public class SqueezeRecipe implements Recipe<SimpleInventory> {
 
         public static final SqueezeRecipe.Serializer INSTANCE = new SqueezeRecipe.Serializer();
         public static final String ID = "squeeze";
+        public static final MapCodec<SqueezeRecipe> CODEC = RecordCodecBuilder.mapCodec(
+                instance -> instance.group(Ingredient.DISALLOW_EMPTY_CODEC.listOf().fieldOf("ingredients")
+                                .flatXmap(ingredients ->{
+                                    Ingredient[] ingredients1 = ingredients.stream().filter(ingredient -> !ingredient.isEmpty()).toArray(Ingredient[]::new);
+                                    if (ingredients1.length == 0){
+                                        return DataResult.error(()->"No ingredients");
+                                    }
+                                    return DataResult.success(DefaultedList.copyOf(Ingredient.EMPTY,ingredients1));
+                                },DataResult::success).forGetter(SqueezeRecipe::getIngredients)
+                        ,(ItemStack.VALIDATED_CODEC.fieldOf("output")).forGetter(recipe -> recipe.output_item)
+                        ,Codec.STRING.fieldOf("fluid").forGetter(recipe -> recipe.fluid_name)
+                        ,Codec.INT.fieldOf("amount").forGetter(recipe -> recipe.fluid_amount)
+                        ,Codec.BOOL.optionalFieldOf("is_danger",false).forGetter(recipe -> recipe.isDanger)
+                        ,Codec.BOOL.optionalFieldOf("do_create_fire",false).forGetter(recipe -> recipe.doCreateFire)
+                ).apply(instance, SqueezeRecipe::new)
+        );
+        public static final PacketCodec<RegistryByteBuf, SqueezeRecipe> PACKET_CODEC = PacketCodec.ofStatic(SqueezeRecipe.Serializer::write, SqueezeRecipe.Serializer::read);
 
-        public static FluidStack getFluidFromJson(JsonObject json){
-            String string = JsonHelper.getString(json, "fluid");
-            Fluid fluid = Registries.FLUID.getOrEmpty(Identifier.tryParse(string)).orElseThrow(() -> new JsonSyntaxException("Unknown fluid '" + string + "'"));
-            int i = JsonHelper.getInt(json, "amount", 9000);
-            if (i < 1) {
-                throw new JsonSyntaxException("Invalid fluid amount count: " + i);
-            } else {
-                return new FluidStack(FluidVariant.of(fluid),i);
-            }
-        }
-        @Override
-        public SqueezeRecipe read(Identifier id, JsonObject json) {
-            ItemStack output = ShapedRecipe.outputFromJson(JsonHelper.getObject(json,"output"));
-            JsonArray ingredients = JsonHelper.getArray(json,"ingredients");
-            FluidStack fluid = getFluidFromJson(JsonHelper.getObject(json,"fluid_output"));
-
+        private static SqueezeRecipe read(RegistryByteBuf buf) {
             DefaultedList<Ingredient> inputs = DefaultedList.ofSize(1,Ingredient.EMPTY);
-
-            for(int i=0;i<inputs.size();i++){
-                inputs.set(i,Ingredient.fromJson(ingredients.get(i)));
-            }
-            boolean isDanger = JsonHelper.getBoolean(json,"is_danger",false);
-            boolean doCreateFire = JsonHelper.getBoolean(json,"do_create_fire",false);
-            return new SqueezeRecipe(id, inputs, output,fluid,isDanger,doCreateFire);
+            inputs.replaceAll(ignored -> Ingredient.PACKET_CODEC.decode(buf));
+            ItemStack output = ItemStack.PACKET_CODEC.decode(buf);
+            String fluid_name = buf.readString();
+            int fluid_amount = buf.readInt();
+            boolean is_danger = buf.readBoolean();
+            boolean do_create_fire = buf.readBoolean();
+            return new SqueezeRecipe(inputs,output,fluid_name, fluid_amount, is_danger, do_create_fire);
         }
 
-        @Override
-        public SqueezeRecipe read(Identifier id, PacketByteBuf buf) {
-            DefaultedList<Ingredient> inputs = DefaultedList.ofSize(buf.readInt(),Ingredient.EMPTY);
-
-            inputs.replaceAll(ignored -> Ingredient.fromPacket(buf));
-
-            ItemStack output = buf.readItemStack();
-            String string = buf.readString();
-            Fluid fluid = Registries.FLUID.getOrEmpty(Identifier.tryParse(string)).orElseThrow(() -> new JsonSyntaxException("Unknown fluid '" + string + "'"));
-            int amount = buf.readInt();
-            boolean isDanger = buf.readBoolean();
-            boolean doCreateFire = buf.readBoolean();
-            return new SqueezeRecipe(id, inputs, output, new FluidStack(FluidVariant.of(fluid),amount),isDanger,doCreateFire);
-        }
-
-        @Override
-        public void write(PacketByteBuf buf, SqueezeRecipe recipe) {
-            buf.writeInt(recipe.getIngredients().size());
-            for(Ingredient ingredient : recipe.getIngredients()){
-                ingredient.write(buf);
+        private static void write(RegistryByteBuf buf, SqueezeRecipe recipe) {
+            for (Ingredient ingredient : recipe.getIngredients()){
+                Ingredient.PACKET_CODEC.encode(buf,ingredient);
             }
-            buf.writeItemStack(recipe.output_item);
-            Fluid fluid = recipe.getOutputFluid().getFluidVariant().getFluid();
-            String string = Registries.FLUID.getId(fluid).toString();
-            buf.writeString(string);
-            int amount = (int)recipe.getOutputFluid().getAmount();
-            buf.writeInt(amount);
+            ItemStack.PACKET_CODEC.encode(buf,recipe.getResult(null));
+            buf.writeString(recipe.fluid_name);
+            buf.writeInt(recipe.fluid_amount);
             buf.writeBoolean(recipe.isDanger);
             buf.writeBoolean(recipe.doCreateFire);
+        }
+
+        @Override
+        public MapCodec<SqueezeRecipe> codec() {
+            return CODEC;
+        }
+
+        @Override
+        public PacketCodec<RegistryByteBuf, SqueezeRecipe> packetCodec() {
+            return PACKET_CODEC;
         }
     }
 }
